# crab-hpf

./: .gitignore  CMakeLists.txt  README.md  main.cpp
client/python/: bench.py  client.py
config/: dev.ini  workflow.xml
engine/: Context.h  Plugin.h  PluginHelper.cpp  PluginHelper.h  Work.cpp  Work.h  Workflow.cpp  Workflow.h
plugin/: EchoPlugin.cpp  EchoPlugin.h  README.md
server/: Server.cpp  Server.h
socket/: ClientSocket.cpp  ClientSocket.h  EventPoller.cpp  EventPoller.h  ServerSocket.cpp  ServerSocket.h  Socket.cpp  Socket.h  SocketHandler.cpp  SocketHandler.h
task/: EchoTask.cpp  EchoTask.h  TaskFactory.h  WorkTask.cpp  WorkTask.h
thread/: AutoLock.cpp  AutoLock.h  Condition.cpp  Condition.h  Mutex.cpp  Mutex.h  Task.cpp  Task.h  TaskDispatcher.cpp  TaskDispatcher.h  Thread.cpp  Thread.h  ThreadPool.cpp  ThreadPool.h  WorkerThread.cpp  WorkerThread.h
utility/: ObjectPool.h  Singleton.h  System.cpp  System.h
utility/ini/: IniFile.cpp  IniFile.h  README.md  test.ini
utility/json/: Json.cpp  Json.h  Parser.cpp  Parser.h
utility/logger/: Logger.cpp  Logger.h
utility/xml/: Element.cpp  Element.h  Parser.cpp  Parser.h
